--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=,h, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css"/>
+
+    <style>
+        p{
+            background: green;
+            color: white;
+            font-size: 18px;
+        }
+        </style>
+
+
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/pizza.html">Pizza</a>
     <a href="recipes/hamburger.html">Hamburger</a>
 </body>
+
+<div>Style me via the external method!</div>
+
+<p>I would like to be styled with the internal method, please.</p>
+
+<button style="background-color: orange; font-size: 18px;">Inline Method</button>
+
+
+
+
+
 </html>
