--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
 
 <button style="background-color: orange; font-size: 18px;">Inline Method</button>
 
+<p class="class1">Number 1 - I'm a class!</p>
 
+<p id="id1">Number 2 - I'm one ID.</p>
 
+<p class="class2">Number 3 - I'm a class, but cooler!</p>
 
+<p id="id2">Number 4 - I'm another ID.</p>
+
+<p class="class3">Number 5 - I'm a class!</p>
 
 </html>
