--- a/index.html
+++ b/index.html
@@ -38,4 +38,8 @@
 
 <p class="class3">Number 5 - I'm a class!</p>
 
+<button class="button1">Click Me!</button>
+
+<button class="button2">No, Click Me!</button>
+
 </html>
