Added more styling to some div elements, used selector chaining

--- a/index.html
+++ b/index.html
@@ -42,4 +42,14 @@
 
 <button class="button2">No, Click Me!</button>
 
+<div class="ancestor">
+    Hi, I'm the ancestor
+    <div class="child1">
+      Hi, I'm the child
+      <div class="child2">
+        Hi, I'm the second child
+      </div>
+    </div>
+  </div> 
+
 </html>
