Added more styling to div and p elements, used descendant combining

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
         Hi, I'm the second child
       </div>
     </div>
-  </div> 
+</div> 
+
+<div class="exercise05">
+    <p class="styled">This should be styled</p>
+    <p class="unstyled">This should be unstyled</p>
+    <p class="unstyled">This should be unstyled</p>
+    <p class="styled">This should be styled</p>
+    <p class="styled">This should be styled</p>
+</div>
+
 
 </html>
